# TwitterClone-FastAPI

./: .env  .gitignore  Anleitung.md  Dockerfile  README.md  docker-compose.yaml  docker-compose_old.yaml  nginx.conf  pyproject.toml  requirements.txt  requirements_old.txt  tree.txt  twitter.db
src/app/: main.py
src/app/auth/: auth.py
src/app/crud/: followers.py  likes.py  posts.py  users.py
src/app/db_and_models/: engine.py  models.py  session.py
src/app/routers/: followers.py  likes.py  posts.py  users.py
src/twitter.egg-info/: PKG-INFO  SOURCES.txt
